--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,8 @@
       ],
       "js": [
         "content-script.js"
-      ]
+      ],
+      "run_at": "document_start"
     }
   ],
   "web_accessible_resources": [
