--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "build:watch": "npm run build -- -w",
+    "dev:web": "npm run build:web -- -w",
+    "dev:content": "npm run build:content -- -w",
+    "dev:service": "npm run build:service -- -w",
+    "build:web": "vite build -c vite.config.ts",
+    "build:content": "vite build -c vite.config.content.ts",
+    "build:service": "vite build -c vite.config.service.ts",
+    "build": "tsc -b && npm run build:web -- --emptyOutDir true && npm run build:content && npm run build:service",
     "lint": "eslint .",
     "preview": "vite preview"
   },
