--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev": "vite dev",
     "dev:web": "npm run build:web -- -w",
     "dev:content": "npm run build:content -- -w",
     "dev:service": "npm run build:service -- -w",
@@ -21,6 +22,7 @@
     "@monaco-editor/react": "^4.7.0-rc.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "form-pilot": "^0.0.4",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
