--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,6 +22,9 @@
       "sandbox.html"
     ]
   },
+  "side_panel": {
+    "default_path": "index.html"
+  },
   "web_accessible_resources": [
     {
       "resources": [
@@ -38,7 +41,8 @@
     "declarativeNetRequestFeedback",
     "scripting",
     "cookies",
-    "storage"
+    "storage",
+    "sidePanel"
   ],
   "host_permissions": [
     "<all_urls>"
