--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/chrome": "^0.0.304",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
