--- a/public/manifest.json
+++ b/public/manifest.json
@@ -40,7 +40,8 @@
   ],
   "permissions": [
     "sidePanel",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "host_permissions": [
     "<all_urls>"
