--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,6 +25,9 @@
   "side_panel": {
     "default_path": "index.html"
   },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; worker-src 'self';"
+  },
   "action": {
     "default_title": "NetPal"
   },
