--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "npm run dev:web",
     "dev:web": "npm run build:web -- -w",
     "dev:content": "npm run build:content -- -w",
     "dev:service": "npm run build:service -- -w",
