--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "npm run dev:web",
-    "dev:web": "npm run build:web -- -w",
-    "dev:content": "npm run build:content -- -w",
-    "dev:service": "npm run build:service -- -w",
+    "dev:web": "cross-env NODE_ENV=development npm run build:web -- -w -m development",
+    "dev:content": "cross-env NODE_ENV=development npm run build:content -- -w -m development",
+    "dev:service": "cross-env NODE_ENV=development npm run build:service -- -w -m development",
     "build:web": "vite build -c vite.config.ts",
-    "build:monaco": "rm -rf ./public/monaco-editor && cp -r ./node_modules/monaco-editor/min ./public/monaco-editor",
+    "build:monaco": "node ./monaco.build.mjs",
     "build:content": "vite build -c vite.config.content.ts",
     "build:service": "vite build -c vite.config.service.ts",
     "build": "npm run lint && npm run build:monaco && npm run build:web -- --emptyOutDir true && npm run build:content && npm run build:service",
@@ -32,14 +32,17 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/chrome": "^0.0.326",
+    "@types/fs-extra": "^11.0.4",
     "@types/lodash": "^4.17.19",
     "@types/node": "^24.0.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "fs-extra": "^11.3.0",
     "globals": "^16.2.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0",
