--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev:web": "cross-env NODE_ENV=development npm run build:web -- -w -m development",
     "dev:content": "cross-env NODE_ENV=development npm run build:content -- -w -m development",
     "dev:service": "cross-env NODE_ENV=development npm run build:service -- -w -m development",
+    "dev:injection": "cross-env NODE_ENV=development npm run build:injection -- -w -m development",
     "build:web": "vite build -c vite.config.ts",
     "build:monaco": "node ./monaco.build.mjs",
     "build:content": "vite build -c vite.config.content.ts",
     "build:service": "vite build -c vite.config.service.ts",
-    "build": "npm run lint && npm run build:monaco && npm run build:web -- --emptyOutDir true && npm run build:content && npm run build:service",
+    "build:injection": "vite build -c vite.config.injection.ts",
+    "build": "npm run lint && npm run build:monaco && npm run build:web -- --emptyOutDir true && npm run build:content && npm run build:service && npm run build:injection",
     "lint": "eslint . && tsc -b",
     "preview": "vite preview"
   },
