feat: 修改存储空间限制

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,7 +41,8 @@
   "permissions": [
     "sidePanel",
     "tabs",
-    "storage"
+    "storage",
+    "unlimitedStorage"
   ],
   "host_permissions": [
     "<all_urls>"
